added swagger controllers and models
